# BookWormShopDjango

./: README.md  pyproject.toml
BookWormShop/: db.sqlite3  manage.py
BookWormShop/BookWormShop/: asgi.py  settings.py  urls.py  wsgi.py
BookWormShop/shop/: models.py
BookWormShop/shop/migrations/: 0001_initial.py
