[tool.poetry]
name = "bookworkshopdjango"
version = "0.1.0"
description = ""
authors = ["HomeSani <dfghjjhgfd311@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
